Verify decryption gets `DataForVerifier`, update server and example clients
